[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "synthetic_trees"
authors = [
    {name = "Harry Dobbs", email = "harrydobbs87@gmail.com"},
]
description = "Tools for synthetic tree point cloud dataset."
readme = "README.rst"
requires-python = "==3.8.16"
license = {text = "MIT"}
dependencies = [
    'numpy',
    'open3d==0.16',
    'pykeops',
    'torch@https://download.pytorch.org/whl/cu116/torch-1.13.1%2Bcu116-cp38-cp38-linux_x86_64.whl' # needs to be work with
    ]
dynamic = ["version"]

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

[project.scripts]
view-synthetic-tree = "synthetic_trees.visualizer.view:main"
download-synthetic-trees = "synthetic_trees.download:main"



