[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "synthetic_trees"
authors = [
    {name = "Harry Dobbs", email = "harrydobbs87@gmail.com"},
]
description = "Tools for synthetic tree point cloud dataset."
readme = "README.rst"
requires-python = ">=3.7"
license = {text = "MIT"}
dependencies = [
    'numpy',
    'open3d==0.17',
    'pykeops',
    'torch']
dynamic = ["version"]

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

[project.scripts]
view-synthetic-trees = "synthetic_trees.view:main"
download-synthetic-trees = "synthetic_trees.download:main"
evaluate-synthetic-trees = "synthetic_trees.evaluate:main"
process-synthetic-trees-results = "synthetic_trees.process_results:main"
view-pointclouds = "synthetic_trees.view_clouds:main"


